--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
 bin/
 obj/
-/packages/
+
+packages/
+
+.idea/
+.vscode/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+*_ReSharper.*
+_ReSharper.Caches/
 riderModule.iml
-/_ReSharper.Caches/
+*.DotSettings.user
+
+*.log
+*.tmp
+*.bak
+*.temp
+
+.DS_Store
+Thumbs.db
+desktop.ini
+
+BepInEx/Cache/
+BepInEx/plugins/disabled/
+BepInEx/config/Backups/
+
+WeatherGains.sln.DotSettings.user
+launchSettings.json
